@@ -1,3 +1,5 @@
+- Bug Fix: Consider all registration states when executing the anull debit entries generation rule [#qubIT-Fenix-5538]
+
 11.17.4 (19-07-2024)
 - Improvement: Use excess payment settlemnt origin, to get a related treasury event, and use it to print registratrion info [#qubIT-Fenix-5528]
 
